# mem1

./: .gitignore  BENCHMARK_PLAN.md  TODO_BENCHMARK.md  justfile
evaluation/: Makefile
evaluation/src/: dataset_slice.py  mem1_add.py  mem1_search.py
evaluation/tests/: test_dataset_slice.py  test_mem1_add_dates.py  test_mem1_search_context.py  test_mem1_search_prompt.py
mem1-mcp/src/: server.rs
mem1-server/: README.md
mem1-server/src/: main.rs
mem1-server/src/api/: dto.rs  handlers.rs
mem1-server/src/memory/: download.rs  mmr.rs  model.rs
mem1-server/src/storage/: db.rs  memory.rs  mod.rs
mem1-server/tests/: integration_storage.rs  storage_test.rs
python/: pyproject.toml
python/examples/: example.py
python/src/mem1/: __init__.py  client.py  memory.py  models.py
python/tests/: test_memory_api.py
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/examples/: example.ts
typescript/src/: client.test.ts  client.ts  index.ts  memory.ts  types.ts
