[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mem1"
version = "0.1.0"
description = "Async Python SDK for the mem1 AI memory service"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/mem1"]
